--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5488840-41"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-5488840-41');
+    </script>
+
         <script>
             L_NO_TOUCH = false;
             L_DISABLE_3D = false;
